--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
          <div class="main-content">
 
     {{>header}}
-    <p>This site was created by Rajnish.It uses data from mapbox.com and darksky.net</p>
+    <p>This site was created by Rajnish.It uses data from mapbox.com and darksky.net!</p>
     <img class="portrait" src="/img/eAruhKh8_400x400.jpg">
          </div>
     {{>footer}}
